--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
 
 <div id="app">
-    <img v-bind:src="picture" alt="">
+    <img 
+    :class="gender"
+    v-bind:src="picture"
+    alt="">
     <h1> {{firstName}} {{lastName}}</h1>
     <h3>Email: {{email}}</h3>
-    <button>Get Random User</button>
+    <button v-on:click="getUser()" 
+    :class="gender" >Get Random User</button>
 </div>
 
     <script src="https://unpkg.com/vue@next"></script>
